--- a/themes/demo-starter-theme/style.css
+++ b/themes/demo-starter-theme/style.css
@@ -472,7 +472,7 @@ big {
 /* Elements
 --------------------------------------------- */
 body {
-	background: #fff;
+	background: rgb(151, 151, 151);
 }
 
 hr {
