--- a/themes/wphierarchy/style.css
+++ b/themes/wphierarchy/style.css
@@ -210,6 +210,16 @@ body {
   #secondary h2 {
     font-size: 1.2rem;
   }
+
+  .home #secondary {
+    width: 100%;
+    clear: both;
+  }
+
+  .home #secondary .widget {
+    width: 30%;
+    float: left;
+  }
   
   .byline {
     color: #777;
